--- a/info/index.html
+++ b/info/index.html
@@ -80,9 +80,9 @@
           always looking for new ways to push the boundaries of design and move toward the avant-garde.
         </div><br><br>
         <div class="studies">
-          <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);">instagram&nbsp;</a>
-          <a href="https://https://www.linkedin.com/in/andrea-gizzi-83b518297/"
-            style="color: rgb(255, 98, 0);">linkedin&nbsp;</a>
+          <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">behance&nbsp;</a>
+          <a href="https://www.linkedin.com/in/andrea-gizzi/" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">linkedin&nbsp;</a>
+          <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">instagram&nbsp;</a>
           <a href="mailto:andreagizzi2003@gmail.com" style="color: rgb(255, 98, 0);">e-mail</a>
         </div>
       </div>
