--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <meta name="twitter:url" content="https://andrea-gizzi.ch">
   <meta property="og:url" content="https://andrea-gizzi.ch">
 
+  <!-- provare se servono veramente -->
+  <link rel="preconnect" href="https://player.vimeo.com" crossorigin>
+  <link rel="preconnect" href="https://i.vimeocdn.com" crossorigin>
+  <link rel="dns-prefetch" href="//player.vimeo.com">
+  <link rel="dns-prefetch" href="//i.vimeocdn.com">
+
   <link rel="icon" type="image/png" href="assets/favicon/1.png">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -97,9 +103,8 @@
   <div class="video-background">
     <div id="bg-video" class="vimeo-wrapper" aria-hidden="true">
       <iframe id="bg-video-iframe"
-        src="https://player.vimeo.com/video/1072980885?background=1&muted=1&autoplay=1&loop=1"
-        frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen
-        title="Background video"></iframe>
+        src="https://player.vimeo.com/video/1072980885?background=1&muted=1&autoplay=1&loop=1" frameborder="0"
+        allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Background video"></iframe>
     </div>
   </div>
 
@@ -117,7 +122,8 @@
     <div class="corner bottom-right">00</div>
   </div>
 
-  <script src="https://player.vimeo.com/api/player.js"></script>
+  <script defer src="https://player.vimeo.com/api/player.js"></script>
+  <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
   <script src="script.js"></script>
 </body>
 
