--- a/project/index.html
+++ b/project/index.html
@@ -5,6 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AG/</title>
+
+  <link rel="preconnect" href="https://player.vimeo.com" crossorigin>
+  <link rel="preconnect" href="https://i.vimeocdn.com" crossorigin>
+  <link rel="dns-prefetch" href="//player.vimeo.com">
+  <link rel="dns-prefetch" href="//i.vimeocdn.com">
+
   <link rel="stylesheet" href="../styles.css">
   <link rel="icon" type="image/png" href="../assets/favicon/1.png">
 </head>
@@ -98,7 +104,7 @@
     <div class="corner bottom-right">00</div>
   </div>
 
-  <script src="https://player.vimeo.com/api/player.js"></script>
+  <script defer src="https://player.vimeo.com/api/player.js"></script>
   <script src="script.js"></script>
 </body>
 
