--- a/index.html
+++ b/index.html
@@ -4,24 +4,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- PRIMARY TITLE & DESCRIPTION -->
   <title>Andrea Gizzi</title>
-
-  <meta name="copyright" content="andrea gizzi">
-  <meta name="web_author" content="andrea gizzi">
-  <meta name="twitter:title" content="Andrea Gizzi">
-  <meta property="og:title" content="Andrea Gizzi">
-
   <meta name="description"
-    content="I'm Andrea Gizzi, a visual designer from Italy, specializing in Interaction Design at SUPSI. Explore my portfolio and immerse yourself in my creative world.">
-  <meta name="twitter:description"
-    content="I'm Andrea Gizzi, a visual designer from Italy, specializing in Interaction Design at SUPSI. Explore my portfolio and immerse yourself in my creative world.">
-  <meta property="og:description"
-    content="I'm Andrea Gizzi, a visual designer from Italy, specializing in Interaction Design at SUPSI. Explore my portfolio and immerse yourself in my creative world.">
+    content="Andrea Gizzi — Graphic Designer specialized in Interaction Design. Official portfolio and selected projects.">
 
-  <meta name="twitter:url" content="https://andrea-gizzi.ch">
-  <meta property="og:url" content="https://andrea-gizzi.ch">
+  <!-- JSON-LD: Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfilePage",
+    "mainEntity": {
+      "@type": "Person",
+      "name": "Andrea Gizzi",
+      "url": "https://andreagizzi.ch/",
+      "jobTitle": "Graphic Designer",
+      "description": "Andrea Gizzi — Graphic Designer specialized in Interaction Design. Official portfolio and selected projects.",
+      "sameAs": [
+      "https://www.behance.net/andreagizzi1",
+      "https://www.linkedin.com/in/andrea-gizzi/",
+      "https://www.instagram.com/andrea.gizziiii/"
+      ]
+    }
+  }
+  </script>
 
-  <!-- provare se servono veramente -->
+  <!-- CANONICAL / INDEXING -->
+  <link rel="canonical" href="https://andreagizzi.ch/">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Andrea Gizzi">
+  <meta name="copyright" content="© 2025 Andrea Gizzi">
+
+  <!-- Open Graph (Facebook, LinkedIn, ecc.) -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="Andrea Gizzi">
+  <meta property="og:title" content="Andrea Gizzi">
+  <meta property="og:description" content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
+  <meta property="og:url" content="https://andreagizzi.ch/">
+  <meta property="og:image" content="https://andreagizzi.ch/assets/og-image.png">
+  <meta property="og:image:alt" content="Andrea Gizzi Portfolio — Graphic Designer">
+
+  <!-- Twitter / X card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Andrea Gizzi">
+  <meta name="twitter:description" content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
+  <meta name="twitter:image" content="https://andreagizzi.ch/assets/og-image.png">
+
+
+  <!-- Performance hints -->
   <link rel="preconnect" href="https://player.vimeo.com" crossorigin>
   <link rel="preconnect" href="https://i.vimeocdn.com" crossorigin>
   <link rel="dns-prefetch" href="//player.vimeo.com">
@@ -41,7 +73,7 @@
 
   <header>
     <div class="start-container">
-      <div id="text">AG/</div>
+      <div id="text">AG/</div><br>
     </div>
   </header>
 
@@ -123,7 +155,6 @@
   </div>
 
   <script defer src="https://player.vimeo.com/api/player.js"></script>
-  <!-- <script src="https://player.vimeo.com/api/player.js"></script> -->
   <script src="script.js"></script>
 </body>
 
