aggiornamento testi + meta home

--- a/info/index.html
+++ b/info/index.html
@@ -69,8 +69,7 @@
         <div id="description">
           Hello &#58;&#41;<br><br>My name is Andrea Gizzi, I am an Italian-Swiss designer with a degree in Visual
           Communication from SUPSI,
-          specializing in Interaction Design. I have worked as a UI/UX Designer at Hexagon Swiss and developed personal
-          and freelance projects that explore the intersection of design and technology.
+          specializing in Interaction Design.
           <br><br>
           My cross-media approach combines print and digital to create cohesive and impactful visual experiences, with a
           particular focus on UI/UX, interaction design, and AI.
