--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Andrea Gizzi">
   <meta property="og:title" content="Andrea Gizzi">
-  <meta property="og:description" content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
+  <meta property="og:description"
+    content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
   <meta property="og:url" content="https://andreagizzi.ch/">
   <meta property="og:image" content="https://andreagizzi.ch/assets/og-image.png">
   <meta property="og:image:alt" content="Andrea Gizzi Portfolio — Graphic Designer">
@@ -49,7 +50,8 @@
   <!-- Twitter / X card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Andrea Gizzi">
-  <meta name="twitter:description" content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
+  <meta name="twitter:description"
+    content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
   <meta name="twitter:image" content="https://andreagizzi.ch/assets/og-image.png">
 
 
