--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   </div>
 
   <script defer src="https://player.vimeo.com/api/player.js"></script>
-  <script src="script.js"></script>
+  <script defer src="script.js"></script>
 </body>
 
 </html>
