defer + gestione video home + gestione audio project

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
     <div class="corner bottom-right">00</div>
   </div>
 
-  <script defer src="https://player.vimeo.com/api/player.js"></script>
-  <script defer src="script.js"></script>
+  <script src="https://player.vimeo.com/api/player.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
