--- a/info/index.html
+++ b/info/index.html
@@ -90,7 +90,7 @@
 
   <div id="bottom-cont-info">
     <p>PROFILE</p>
-    <p class="context">Education & experience</p>
+    <p class="context">Education & Experience</p>
     <br>
     <div class="button-cont-info">
       <div class="cv-cont">
