--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
   <meta property="og:description"
     content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
   <meta property="og:url" content="https://andreagizzi.ch/">
-  <meta property="og:image" content="https://andreagizzi.ch/assets/og-image.png">
+  <meta property="og:image" content="https://andreagizzi.ch/assets/favicon/2.png">
   <meta property="og:image:alt" content="Andrea Gizzi Portfolio — Graphic Designer">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Andrea Gizzi">
   <meta name="twitter:description"
     content="Discover the portfolio of Andrea Gizzi, Graphic Designer specialized in Interaction Design, with selected works and creative explorations.">
-  <meta name="twitter:image" content="https://andreagizzi.ch/assets/og-image.png">
+  <meta name="twitter:image" content="https://andreagizzi.ch/assets/favicon/2.png">
 
   <link rel="preconnect" href="https://player.vimeo.com" crossorigin>
   <link rel="preconnect" href="https://i.vimeocdn.com" crossorigin>
