da provare (icona web)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
   <link rel="dns-prefetch" href="//i.vimeocdn.com">
 
   <link rel="icon" type="image/png" href="assets/favicon/1.png">
+  <!-- <link rel="icon" type="image/x-icon" href="assets/favicon/1.png">  DA PROVARE -->
   <link rel="stylesheet" href="styles.css">
 </head>
 
