motion design info

--- a/info/index.html
+++ b/info/index.html
@@ -72,7 +72,7 @@
           specializing in Interaction Design.
           <br><br>
           My cross-media approach combines print and digital to create cohesive and impactful visual experiences, with a
-          particular focus on UI/UX, interaction design, and AI.
+          particular focus on UI/UX, interaction design, motion design and AI.
           <br><br>
           Passionate about precision, problem solving, and innovation, I draw inspiration from sports, music and
           fashion,
