--- a/info/index.html
+++ b/info/index.html
@@ -80,8 +80,10 @@
         </div><br><br>
         <div class="studies">
           <!-- <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">behance&nbsp;</a> -->
-          <a href="https://www.linkedin.com/in/andreagizzi/" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">linkedin&nbsp;</a>
-          <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">instagram&nbsp;</a>
+          <a href="https://www.linkedin.com/in/andreagizzi/" style="color: rgb(255, 98, 0);" target="_blank"
+            rel="noopener noreferrer">linkedin&nbsp;</a>
+          <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);" target="_blank"
+            rel="noopener noreferrer">instagram&nbsp;</a>
           <a href="mailto:andreagizzi2003@gmail.com" style="color: rgb(255, 98, 0);">e-mail</a>
         </div>
       </div>
@@ -90,49 +92,34 @@
 
   <div id="bottom-cont-info">
     <p>PROFILE</p>
-    <p class="context">Education & Experience</p>
-    <br>
+    <p class="context margin-bottom">Education & Experience</p>
     <div class="button-cont-info">
-      <div class="cv-cont">
-        <div class="studies">
-          <p class="school" style="opacity: 0.5;"><br>studies</p>
-          <p class="edu">
-            Setificio - Graphics and communication<br>
-            SUPSI - Visual Communication
-          </p>
-        </div>
-        <div class="dates">
-          <p class="period" style="opacity: 0.5;"><br>date</p>
-          <p class="date">2016 - 2021<br>2022 - 2025</p>
-        </div>
-      </div>
-      <div class="cv-cont">
-        <div class="studies">
-          <p class="school" style="opacity: 0.5;">experiences</p>
-          <p class="edu">
-            Designer Freelancer<br>
-            Hexagon Swiss - UI/UX Designer
-          </p>
-        </div>
-        <div class="dates">
-          <p class="period">&nbsp;</p>
-          <p class="date">2021 -<br>2023 -</p>
-        </div>
-      </div>
-      <div class="cv-cont">
-        <div class="studies">
-          <p class="school" style="opacity: 0.5;">exhibition</p>
-          <p class="edu">
-            Photo Schweiz<br>
-            Milano Design Week 2025
-          </p>
-        </div>
-        <div class="dates">
-          <p class="period">&nbsp;</p>
-          <p class="date">2025<br>2025</p>
-        </div>
-        <br>
-      </div>
+      <dl class="cv-cont">
+        <dt class="school">studies</dt>
+        <dd class="period">date</dd>
+        <dt>Setificio - Graphics and communication</dt>
+        <dd>2016 - 2021</dd>
+        <dt>SUPSI - Visual Communication</dt>
+        <dd>2022 - 2025</dd>
+      </dl>
+
+      <dl class="cv-cont">
+        <dt class="school">experiences</dt>
+        <dd class="period">&nbsp;</dd>
+        <dt>Designer Freelancer</dt>
+        <dd>2021 -</dd>
+        <dt>Hexagon Swiss - UI/UX Designer</dt>
+        <dd>2023 -</dd>
+      </dl>
+
+      <dl class="cv-cont">
+        <dt class="school">exhibition</dt>
+        <dd class="period">&nbsp;</dd>
+        <dt>Photo Schweiz</dt>
+        <dd>2025</dd>
+        <dt>Milano Design Week 2025</dt>
+        <dd>2025</dd>
+      </dl>
     </div>
     <button id="description-button" class="toggleButton expand-button cv-button" aria-expanded="false"
       aria-controls="description-content">
