--- a/info/index.html
+++ b/info/index.html
@@ -79,7 +79,8 @@
           always looking for new ways to push the boundaries of design and move toward the avant-garde.
         </div><br><br>
         <div class="studies">
-          <!-- <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" rel="noopener noreferrer">behance&nbsp;</a> -->
+          <!-- <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" 
+            rel="noopener noreferrer">behance&nbsp;</a> -->
           <a href="https://www.linkedin.com/in/andreagizzi/" style="color: rgb(255, 98, 0);" target="_blank"
             rel="noopener noreferrer">linkedin&nbsp;</a>
           <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);" target="_blank"
