--- a/project/index.html
+++ b/project/index.html
@@ -44,8 +44,7 @@
   <div class="project-description">
     <p id="project-title">PROJECT TITLE</p>
     <p class="context" id="project-year">PROJECT YEAR</p>
-    <p id="project-extra"></p>
-    <br>
+    <p class="extra" id="project-extra"></p>
     <div id="description-content" class="description-content"></div>
     <button id="description-button" class="toggleButton expand-button cv-button" aria-expanded="false"
       aria-controls="description-content">
