--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
   <link rel="dns-prefetch" href="//i.vimeocdn.com">
 
   <link rel="icon" type="image/png" href="assets/favicon/1.png">
-  <!-- <link rel="icon" type="image/x-icon" href="assets/favicon/1.png">  DA PROVARE -->
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -125,13 +124,14 @@
     </a>
   </div>
 
-  <main style="height:200vh;"></main>
+  <main></main>
 
   <div class="video-background">
     <div id="bg-video" class="vimeo-wrapper" aria-hidden="true">
       <iframe id="bg-video-iframe"
         src="https://player.vimeo.com/video/1072980885?background=1&muted=1&autoplay=1&loop=1" frameborder="0"
-        allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Background video"></iframe>
+        allow="autoplay; fullscreen; picture-in-picture" title="Background video"></iframe>
+        <!-- allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Background video"></iframe> -->
     </div>
   </div>
 
