info bachelor degree

--- a/info/index.html
+++ b/info/index.html
@@ -67,7 +67,7 @@
     <div class="cv">
       <div class="button-cont">
         <div id="description">
-          Hello &#58;&#41;<br><br>My name is Andrea Gizzi, I am an Italian-Swiss designer with a degree in Visual
+          Hello &#58;&#41;<br><br>My name is Andrea Gizzi, I am an Italian-Swiss designer with a Bachelor in Visual
           Communication from SUPSI,
           specializing in Interaction Design.
           <br><br>
