--- a/info/index.html
+++ b/info/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AG/</title>
+  <title>Andrea Gizzi</title>
   <link rel="stylesheet" href="../styles.css">
   <link rel="icon" type="image/png" href="../../assets/favicon/1.png">
 </head>
