ui/ux and graphic designer

--- a/info/index.html
+++ b/info/index.html
@@ -109,7 +109,7 @@
         <dd class="period">&nbsp;</dd>
         <dt>Designer Freelancer</dt>
         <dd>2021 -</dd>
-        <dt>Hexagon Swiss - UI/UX Designer</dt>
+        <dt>Hexagon Swiss - UI/UX and Graphic Designer</dt>
         <dd>2023 -</dd>
       </dl>
 
