--- a/info/index.html
+++ b/info/index.html
@@ -82,12 +82,12 @@
           <!-- <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" 
             rel="noopener noreferrer">behance&nbsp;</a> -->
           <a href="../assets/pdf/GIzzi_Andrea_CV.pdf" download="GIzzi_Andrea_CV.pdf" style="color: rgb(255, 98, 0);"
-            aria-label="Scarica il CV di Andrea Gizzi">cv</a>
+            aria-label="Scarica il CV di Andrea Gizzi">cv&nbsp;</a>
           <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);" target="_blank"
             rel="noopener noreferrer">instagram&nbsp;</a>
           <a href="https://www.linkedin.com/in/andreagizzi/" style="color: rgb(255, 98, 0);" target="_blank"
             rel="noopener noreferrer">linkedin&nbsp;</a>
-          <a href="mailto:andreagizzi2003@gmail.com" style="color: rgb(255, 98, 0);">e-mail&nbsp;</a>
+          <a href="mailto:andreagizzi2003@gmail.com" style="color: rgb(255, 98, 0);">e-mail</a>
         </div>
       </div>
     </div>
