new project add

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <section class="news">
     <p class="news-event">AWARD</p>
-    <p class="news-info"><a href="project/index.html?project=7" style="text-decoration: none;">SENSE - SUPSI VISUAL
+    <p class="news-info"><a href="project/index.html?project=8" style="text-decoration: none;">SENSE - SUPSI VISUAL
         COMUNICATION TALENT WINNER 2025</a></p>
     <button class="news-close">CLOSE</button>
   </section>
@@ -103,22 +103,26 @@
       <span class="project-info">Editorial - 2023</span>
     </a>
     <a href="project/index.html?project=3" class="project-item" data-id="3" style="text-decoration: none;">
+      <span class="project-name">24h</span>
+      <span class="project-info">Photography 2023</span>
+    </a>
+    <a href="project/index.html?project=4" class="project-item" data-id="4" style="text-decoration: none;">
       <span class="project-name">C0°RD’1N.A”TE</span>
       <span class="project-info">Editorial - 2024</span>
     </a>
-    <a href="project/index.html?project=4" class="project-item" data-id="4" style="text-decoration: none;">
+    <a href="project/index.html?project=5" class="project-item" data-id="5" style="text-decoration: none;">
       <span class="project-name">MK-97</span>
       <span class="project-info">Typo - 2025</span>
     </a>
-    <a href="project/index.html?project=5" class="project-item" data-id="5" style="text-decoration: none;">
+    <a href="project/index.html?project=6" class="project-item" data-id="6" style="text-decoration: none;">
       <span class="project-name">ГОША</span>
       <span class="project-info">Co-Design AI - 2025</span>
     </a>
-    <a href="project/index.html?project=6" class="project-item" data-id="6" style="text-decoration: none;">
+    <a href="project/index.html?project=7" class="project-item" data-id="7" style="text-decoration: none;">
       <span class="project-name">SYNC</span>
       <span class="project-info">IxD - 2025</span>
     </a>
-    <a href="project/index.html?project=7" class="project-item" data-id="7" style="text-decoration: none;">
+    <a href="project/index.html?project=8" class="project-item" data-id="8" style="text-decoration: none;">
       <span class="project-name">SENSE</span>
       <span class="project-info">IxD - 2025</span>
     </a>
@@ -131,7 +135,7 @@
       <iframe id="bg-video-iframe"
         src="https://player.vimeo.com/video/1072980885?background=1&muted=1&autoplay=1&loop=1" frameborder="0"
         allow="autoplay; fullscreen; picture-in-picture" title="Background video"></iframe>
-        <!-- allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Background video"></iframe> -->
+      <!-- allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Background video"></iframe> -->
     </div>
   </div>
 
