--- a/info/index.html
+++ b/info/index.html
@@ -39,7 +39,7 @@
       <span class="project-name">Kinetic Art</span>
       <span class="project-info">Editorial - 2023</span>
     </a>
-    <a href="project/index.html?project=3" class="project-item" data-id="3" style="text-decoration: none;">
+    <a href="../project/index.html?project=3" class="project-item" data-id="3" style="text-decoration: none;">
       <span class="project-name">24h</span>
       <span class="project-info">Photography 2023</span>
     </a>
@@ -99,7 +99,10 @@
 
   <div id="bottom-cont-info">
     <p>PROFILE</p>
-    <p class="context margin-bottom">Education & Experience</p>
+    <p class="context margin-bottom" style="margin-bottom: 0px;">Education & Experience</p>
+    <p class="context margin-bottom" style="opacity: 1;"><a href="../assets/pdf/GIzzi_Andrea_CV.pdf"
+        download="GIzzi_Andrea_CV.pdf" style="color: rgb(255, 98, 0); text-decoration-line: none;"
+        aria-label="Scarica il CV di Andrea Gizzi">download cv</a></p>
     <div class="button-cont-info">
       <dl class="cv-cont">
         <dt class="school">studies</dt>
