--- a/info/index.html
+++ b/info/index.html
@@ -85,8 +85,8 @@
         <div class="studies">
           <!-- <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" 
             rel="noopener noreferrer">behance&nbsp;</a> -->
-          <a href="../assets/pdf/GIzzi_Andrea_CV.pdf" download="GIzzi_Andrea_CV.pdf" style="color: rgb(255, 98, 0);"
-            aria-label="Scarica il CV di Andrea Gizzi">cv&nbsp;</a>
+          <!-- <a href="../assets/pdf/GIzzi_Andrea_CV.pdf" download="GIzzi_Andrea_CV.pdf" style="color: rgb(255, 98, 0);"
+            aria-label="Scarica il CV di Andrea Gizzi">cv&nbsp;</a> -->
           <a href="https://www.instagram.com/andrea.gizziiii/" style="color: rgb(255, 98, 0);" target="_blank"
             rel="noopener noreferrer">instagram&nbsp;</a>
           <a href="https://www.linkedin.com/in/andreagizzi/" style="color: rgb(255, 98, 0);" target="_blank"
@@ -102,7 +102,7 @@
     <p class="context margin-bottom" style="margin-bottom: 0px;">Education & Experience</p>
     <p class="context margin-bottom" style="opacity: 1;"><a href="../assets/pdf/GIzzi_Andrea_CV.pdf"
         download="GIzzi_Andrea_CV.pdf" style="color: rgb(255, 98, 0); text-decoration-line: none;"
-        aria-label="Scarica il CV di Andrea Gizzi">download cv</a></p>
+        aria-label="Scarica il CV di Andrea Gizzi">download CV</a></p>
     <div class="button-cont-info">
       <dl class="cv-cont">
         <dt class="school">studies</dt>
