--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
   <div id="image-gallery" class="project-list hidden">
     <a href="project/index.html?project=1" class="project-item" data-id="1" style="text-decoration: none;">
-      <span class="project-name">Massimo Vignelli</span>
-      <span class="project-info">Editorial - 2023</span>
+      <span class="project-name">16esimo</span>
+      <span class="project-info">Editorial 2022</span>
     </a>
     <a href="project/index.html?project=2" class="project-item" data-id="2" style="text-decoration: none;">
       <span class="project-name">Kinetic Art</span>
-      <span class="project-info">Editorial - 2023</span>
+      <span class="project-info">Editorial 2023</span>
     </a>
     <a href="project/index.html?project=3" class="project-item" data-id="3" style="text-decoration: none;">
       <span class="project-name">24h</span>
@@ -108,23 +108,23 @@
     </a>
     <a href="project/index.html?project=4" class="project-item" data-id="4" style="text-decoration: none;">
       <span class="project-name">C0°RD’1N.A”TE</span>
-      <span class="project-info">Editorial - 2024</span>
+      <span class="project-info">Editorial 2024</span>
     </a>
     <a href="project/index.html?project=5" class="project-item" data-id="5" style="text-decoration: none;">
       <span class="project-name">MK-97</span>
-      <span class="project-info">Typo - 2025</span>
+      <span class="project-info">Typo 2025</span>
     </a>
     <a href="project/index.html?project=6" class="project-item" data-id="6" style="text-decoration: none;">
       <span class="project-name">ГОША</span>
-      <span class="project-info">Co-Design AI - 2025</span>
+      <span class="project-info">Co-Design AI 2025</span>
     </a>
     <a href="project/index.html?project=7" class="project-item" data-id="7" style="text-decoration: none;">
       <span class="project-name">SYNC</span>
-      <span class="project-info">IxD - 2025</span>
+      <span class="project-info">IxD 2025</span>
     </a>
     <a href="project/index.html?project=8" class="project-item" data-id="8" style="text-decoration: none;">
       <span class="project-name">SENSE</span>
-      <span class="project-info">IxD - 2025</span>
+      <span class="project-info">IxD 2025</span>
     </a>
   </div>
 
