--- a/project/index.html
+++ b/project/index.html
@@ -59,8 +59,8 @@
 
   <div id="image-gallery" class="project-list hidden">
     <a href="" class="project-item" data-id="1" style="text-decoration: none;">
-      <span class="project-name">Massimo Vignelli</span>
-      <span class="project-info">Editorial 2023</span>
+      <span class="project-name">16esimo</span>
+      <span class="project-info">Editorial 2022</span>
     </a>
     <a href="" class="project-item" data-id="2" style="text-decoration: none;">
       <span class="project-name">Kinetic Art</span>
