--- a/info/index.html
+++ b/info/index.html
@@ -63,6 +63,10 @@
       <span class="project-name">SENSE</span>
       <span class="project-info">IxD 2025</span>
     </a>
+    <!-- <a href="../project/index.html?project=9" class="project-item" data-id="9" style="text-decoration: none;">
+      <span class="project-name">HCL</span>
+      <span class="project-info">Photography 2025</span>
+    </a> -->
   </div>
 
   <main></main>
@@ -119,7 +123,9 @@
         <dt>Designer Freelancer</dt>
         <dd>2021 -</dd>
         <dt>Hexagon Swiss - UI/UX and Graphic Designer</dt>
-        <dd>2023 -</dd>
+        <dd>2023 - 2025</dd>
+        <!-- <dt>HCL - Graphic Designer and Content Creator</dt>
+        <dd>2025 -</dd> -->
       </dl>
 
       <dl class="cv-cont">
