--- a/info/index.html
+++ b/info/index.html
@@ -124,8 +124,8 @@
         <dd>2021 -</dd>
         <dt>Hexagon Swiss - UI/UX and Graphic Designer</dt>
         <dd>2023 - 2025</dd>
-        <!-- <dt>HCL - Graphic Designer and Content Creator</dt>
-        <dd>2025 -</dd> -->
+        <dt>HCL - Graphic Designer and Content Creator</dt>
+        <dd>2026 -</dd>
       </dl>
 
       <dl class="cv-cont">
