--- a/project/index.html
+++ b/project/index.html
@@ -66,29 +66,33 @@
       <span class="project-name">Kinetic Art</span>
       <span class="project-info">Editorial 2023</span>
     </a>
-    <a href="" class="project-item" data-id="3" style="text-decoration: none;">
+    <!-- <a href="" class="project-item" data-id="3" style="text-decoration: none;">
       <span class="project-name">24h</span>
       <span class="project-info">Photography 2023</span>
-    </a>
-    <a href="" class="project-item" data-id="4" style="text-decoration: none;">
+    </a> -->
+    <a href="" class="project-item" data-id="3" style="text-decoration: none;">
       <span class="project-name">C0°RD’1N.A”TE</span>
       <span class="project-info">Editorial 2024</span>
     </a>
-    <a href="" class="project-item" data-id="5" style="text-decoration: none;">
+    <a href="" class="project-item" data-id="4" style="text-decoration: none;">
       <span class="project-name">MK-97</span>
       <span class="project-info">Typo 2025</span>
     </a>
-    <a href="" class="project-item" data-id="6" style="text-decoration: none;">
+    <a href="" class="project-item" data-id="5" style="text-decoration: none;">
       <span class="project-name">ГОША</span>
       <span class="project-info">Co-Design AI 2025</span>
     </a>
-    <a href="" class="project-item" data-id="7" style="text-decoration: none;">
+    <a href="" class="project-item" data-id="6" style="text-decoration: none;">
       <span class="project-name">SYNC</span>
       <span class="project-info">IxD 2025</span>
     </a>
-    <a href="" class="project-item" data-id="8" style="text-decoration: none;">
+    <a href="" class="project-item" data-id="7" style="text-decoration: none;">
       <span class="project-name">SENSE</span>
       <span class="project-info">IxD 2025</span>
+    </a>
+    <a href="" class="project-item" data-id="8" style="text-decoration: none;">
+      <span class="project-name">ON ICE</span>
+      <span class="project-info">Photography 2026</span>
     </a>
   </div>
 
