--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section class="news">
     <p class="news-event">AWARD</p>
     <p class="news-info"><a href="project/index.html?project=7" style="text-decoration: none;">SENSE - SUPSI VISUAL
-        COMUNICATION TALENT WINNER 2025</a></p>
+        COMUNICATION TALENTHESIS WINNER 2025</a></p>
     <button class="news-close">CLOSE</button>
   </section>
 
