--- a/info/index.html
+++ b/info/index.html
@@ -85,6 +85,8 @@
           Passionate about precision, problem solving, and innovation, I draw inspiration from sports, music and
           fashion,
           always looking for new ways to push the boundaries of design and move toward the avant-garde.
+          <br><br>
+          Open to new opportunities and collaborations.
         </div><br><br>
         <div class="studies">
           <!-- <a href="https://www.behance.net/andreagizzi1" style="color: rgb(255, 98, 0);" target="_blank" 
